[gd_scene load_steps=5 format=3 uid="uid://bq8lovm5tapov"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_hqt2v"]
[ext_resource type="PackedScene" uid="uid://d06bsxvpqwt5j" path="res://Scenes/Player.tscn" id="2_grujr"]
[ext_resource type="AudioStream" uid="uid://hobhp50dy57c" path="res://Sounds/Loops/2 - Galactic Odyssey (Loop).wav" id="4_bog63"]
[ext_resource type="AudioStream" uid="uid://dm5h1ie1joyt3" path="res://Sounds/Ambiance/Atmosphere_Hum_Eerie_Loop_Stereo.wav" id="5_m4ww7"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hqt2v")

[node name="Player" parent="." instance=ExtResource("2_grujr")]
z_index = 10
position = Vector2(78, -2869)
collision_layer = 2

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, 8)

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bog63")
autoplay = true

[node name="AmbiancePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_m4ww7")
autoplay = true

[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
